<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#98D19D"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_time"
            android:textColor="#080809"
            android:textSize="20sp" />
    </LinearLayout>
    <View

        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/base_currency"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:text="@string/base_current"
                android:textColor="#272722"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/base_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:text="@string/_122222"
                android:textColor="#272722"
                android:textSize="18sp" />

        </LinearLayout>
        <View

            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:background="#000000" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView
                android:id="@+id/target_currency"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:text="@string/target_current"
                android:textColor="#272722"
                android:textSize="18sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/target_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:text="@string/_5678"
                android:textColor="#272722"
                android:textSize="18sp" />


        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />
</LinearLayout>