<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="29">

            <ImageView
                android:id="@+id/target_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/coin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="16">

            <TextView
                android:id="@+id/target_unit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/vnd"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="55"
            android:orientation="vertical"
            android:weightSum="100">

            <TextView

                android:id="@+id/target_amount"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="15dp"
                android:layout_weight="50"
                android:gravity="bottom"
                android:text="10000"
                android:textAlignment="textEnd"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView

                android:id="@+id/full_name_target_unit"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="15dp"
                android:layout_weight="50"
                android:gravity="top"
                android:text="@string/ero_zone"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#000000" />
</LinearLayout>